UPD: Disabled pass hashing when it is attempting credentials. Registration and Logining works.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -21,5 +21,6 @@
     "Sign In": "Увійти",
     "Sign Up": "Зареєструватися",
     "Type": "Тип",
-    "Welcome": "Ласкаво просимо"
+    "Welcome": "Ласкаво просимо",
+    "Whoops! Something went wrong.": "Запит відхилено."
 }
