UPD: Movement log table title row is reorganized. DEL: removed characteristics field. ADD: button component got a titile.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -14,6 +14,7 @@
     "Model": "Модель",
     "Movement history": "Історія переміщення",
     "New": "Новий",
+    "New entry": "Новий запис",
     "Password": "Пароль",
     "Registration": "Реєстрація",
     "Remember me": "Запам'ятати мене",
