ADD: Modernization canceling is available. Modernization history table is done.

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -12,6 +12,7 @@
     "Location": "Розташування",
     "Login": "Логін",
     "Model": "Модель",
+    "Modernization history": "Історія модернізації",
     "Movement history": "Історія переміщення",
     "New": "Новий",
     "New entry": "Новий запис",
